tests/fixtures/invalid/oct_3_args.py
# oct() takes at most 1 argument, got 3
x = oct(1, 1, 1)
